<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.weatherDetail.WeatherDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/weather_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/weather_image">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/target_area_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:fontFamily="@font/buenard"
                        android:maxLines="2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/detail_target_area_text_size"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/bookmark_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/bookmark_default_image" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/publishing_office_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/publishing_office_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/publishing_office_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/detail_publishing_office_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/detail_publishing_office_title_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/publishing_office_image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/publishing_office_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:gravity="end"
                        android:textColor="@color/detail_publishing_office_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/publishing_office_title"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/report_datetime_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/report_datetime_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/report_datetime_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/detail_report_datetime_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/detail_report_datetime_title_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/report_datetime_image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/report_datetime_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:gravity="end"
                        android:textColor="@color/detail_report_datetime_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/report_datetime_title"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/buenard"
                        android:text="@string/detail_date_title"
                        android:textColor="@color/detail_date_and_note_title"
                        android:textSize="@dimen/detail_date_and_note_title_size" />

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/detail_date_and_note_text"
                        android:textSize="@dimen/detail_date_and_note_text_size" />

                </LinearLayout>

                <TextView
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/note_container_background"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/detail_description_text"
                    android:textSize="@dimen/detail_description_text_size"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/buenard"
                        android:text="@string/detail_note_title"
                        android:textColor="@color/detail_date_and_note_title"
                        android:textSize="@dimen/detail_date_and_note_title_size" />

                    <EditText
                        android:id="@+id/note_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/note_container_background"
                        android:gravity="top"
                        android:hint="@string/detail_note_hint_text"
                        android:lines="6"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="8dp"
                        android:textColor="@color/detail_note_text"
                        android:textSize="@dimen/detail_note_text_text_size" />

                </LinearLayout>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/save_button_background"
                    android:fontFamily="@font/buenard"
                    android:paddingHorizontal="30dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="7dp"
                    android:text="@string/detail_save_button_text"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/detail_save_button_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_layout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/loading_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loading_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>